# To-Do-List

./: db.sqlite3  pyproject.toml
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py
base/templates/base/: login.html  main.html  register.html  task_confirm_delete.html  task_form.html  task_list.html
todo_list/: settings.py
